--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "openapi": "node openapi.config.ts"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@umijs/openapi": "^1.12.1",
+    "axios": "^1.7.2",
     "element-plus": "^2.7.5",
     "less": "^4.2.0",
     "path": "^0.12.7",
